# RemoteClipboard

./: README.md
RemoteClipboardServer/: tcpserver.cpp  tcpserver.h
RemoteClipboardServer-512MB/: CMakeLists.txt  tcpserver.h
RemoteClipboardServer-64MB/: server_main.cpp  tcpserver.cpp  tcpserver.h
RemoteClipboardWindows/: clipboardmonitor.cpp  mainwindow.cpp  tcpclient.cpp
RemoteClipboard_Linux_wayland/: CMakeLists.txt  deploy.ps1  mainwindow.cpp  mainwindow.h  mainwindow.ui  server_main.cpp  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
RemoteclipboardCliForLinux/: .pro  CMakeLists.txt  clipboardmonitor.h  mainwindow.h  mainwindow.ui  tcpclient.h
Remoteclipboard_Mac/: CMakeLists.txt  README.md  clipboard_sync.cpp  clipboard_sync.mm
linux-wayland-wlclipboard/: clipboardmonitor.cpp  clipboardmonitor.h
